15. mini-smtpd.c: removed extra arguments passed to err_size()
- 02/11/2021
16. qmail-send.c, slowq-send.c, qmail-todo.c: use argv0 for program name
17. qmail-todo.c: optimize by writting to comm_buf all files found in todo
    in chunks before doing comm_do
- 05/12/2021
18. rrt.c: fixed command line args for return-path, receipient
19. qmail-send.c, qmail-todo.c, slowq-send.c: fixed argv0

* 
Release 2.14.0 Start 18/07/2021
======= Release Highlights ================================================
o alpine linux ready - openrc script, svctool, minisvc
o github packages - docker/podman images for
  [docker/podman](https://ghcr.io/mbhangui/indimail-mta)
o instant reconfiguration of domain for docker/podman containers
o use global variables directory /etc/indimail/control/global_vars for
  DEFAULT_DOMAIN, QMAILDEFAULTHOST
o installer can now install, uninstall and set permissions
o New control file dkimkeys to override DKIMKEY and allow domain specfic
  keys and selector
===========================================================================
- 18/07/2021
1.  autoresponder.c: conditional define of _XOPEN_SOURCE to avoid
    compilation warning on alpine
2.  Makefile: Fix compilation of qmail-rm target by check for fts lib
3.  qmail-qfilter.c: Corrected by using fcntl.h instead of sys/fcntl.h
4.  installer.c: fixed setting setuid/setgid bits by calling chmod after
    chown
- 19/07/2021
5.  svctool: fixes for alpine linux
6.  svctool: recoded create_users function
7.  qmail-daemon.c: exit 0 if flagexitasap is set
8.  Makefile, indimail-mta.spec: moved creation of indimail-mta-release to
    Makefile
9.  create_service, PKGBUILD.in: --norefreshsvc changed to --autorefresh
10. ported create_users for alpine linux
11. create_service: use tcprules to generate cdb. changed --norefreshsvc
    to --autorefresh
12. tcpopen.c, Makefile: use hasrresvport.h to conditionally compile
    rresvport
- 20/07/2021
13. queue-fix.c: fixed usage string