@@ -34,6 +34,8 @@ Release 2.14.1 Start 21/09/2021
 - 05/12/2021
 18. rrt.c: fixed command line args for return-path, receipient
 19. qmail-send.c, qmail-todo.c, slowq-send.c: fixed argv0
+- 26/02/2022
+20. qmail-smtpd.c: fix ehlo greating for local connections
 
 * 
 Release 2.14.0 Start 18/07/2021
